force-app/main/default/objects/Search_Filter_Row__c/Search_Filter_Row__c.object-meta.xml
<CustomObject>
    <label>e2a Search Filter Row</label>
    <nameField>
        <label>Search Filter Row Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>e2a Search Filter Rows</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>