force-app/main/default/objects/Search_Filter_Row__c/fields/Left1_Link_Via_Field__c.field-meta.xml
<CustomField>
    <fullName>Left1_Link_Via_Field__c</fullName>
    <description>If linking back to the Primary Object, the field on the Starting Object that links back to the Primary Object</description>
    <inlineHelpText>If linking back to the Primary Object, the field on the Starting Object that links back to the Primary Object</inlineHelpText>
    <label>Left1 Link Via Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>