force-app/main/default/objects/Search_Filter_Row__c/fields/Left1_Starting_Object__c.field-meta.xml
<CustomField>
    <fullName>Left1_Starting_Object__c</fullName>
    <description>The name of the lookup object. Can be the primary object (default). If we are traversing back to the Primary object from another object looking up to it, then the name of that starting object</description>
    <inlineHelpText>The name of the lookup object. Can be the primary object (default). If we are traversing back to the Primary object from another object looking up to it, then the name of that starting object</inlineHelpText>
    <label>Left1 Starting Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>