force-app/main/default/objects/Search_Filter_Row__c/fields/Left1_Treat_blank_values_as__c.field-meta.xml
<CustomField>
    <fullName>Left1_Treat_blank_values_as__c</fullName>
    <description>How to treat blank values in the field defined in Left1 Value1. Same functionality as in &quot;QA Member Matching Rule&quot;</description>
    <inlineHelpText>How to treat blank values in the field defined in Left1 Value1.</inlineHelpText>
    <label>Left1 Treat blank values as</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>TreatValuesAsOptions</valueSetName>
    </valueSet>
</CustomField>