force-app/main/default/objects/Search_Filter_Row__c/fields/Left1_Treat_blank_values_as_x_Fixed_Val__c.field-meta.xml
<CustomField>
    <fullName>Left1_Treat_blank_values_as_x_Fixed_Val__c</fullName>
    <description>The fixed value if &quot;Left1 Treat blank values as&quot; is &quot;Fixed Value&quot;</description>
    <inlineHelpText>The fixed value if &quot;Left1 Treat blank values as&quot; is &quot;Fixed Value&quot;</inlineHelpText>
    <label>Left1 Treat blank values as - Fixed Val</label>
    <length>255</length>
    <type>Text</type>
</CustomField>