force-app/main/default/objects/Search_Filter_Row__c/fields/Left1_Value1__c.field-meta.xml
<CustomField>
    <fullName>Left1_Value1__c</fullName>
    <label>Left1 Value1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>