force-app/main/default/objects/Search_Filter_Row__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <length>32</length>
    <type>Text</type>
</CustomField>