force-app/main/default/objects/Search_Filter_Row__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>Search_Filter__c</referenceTo>
    <relationshipLabel>e2a Search Filter Rows</relationshipLabel>
    <relationshipName>e2a_Search_Filter_Rows</relationshipName>
    <type>Lookup</type>
</CustomField>