force-app/main/default/objects/Search_Filter_Row__c/fields/Right1_Value1__c.field-meta.xml
<CustomField>
    <fullName>Right1_Value1__c</fullName>
    <label>Right1 Value1</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>